# afsort

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
benches/: bench.rs
src/: lib.rs
