[package]
name = "afsort"
version = "0.1.1"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]
exclude = [
    "test_resources/*"
]
description = """
American Flag sort implementation for faster sorting of Strings.
"""
homepage = "https://github.com/antonha/afsort"
repository = "https://github.com/antonha/afsort"
readme = "README.md"
keywords = ["sort", "strings","american","flag"]
license = "Unlicense/MIT"


[dev-dependencies]
quickcheck = "0.3"
rand = "0.3"
regex = "0.2"
