[package]
name = "afsort"
version = "0.3.0"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]
exclude = [
    "test_resources/*"
]
description = """
American Flag sort implementation for faster sorting of Strings.
"""
homepage = "https://github.com/antonha/afsort"
repository = "https://github.com/antonha/afsort"
readme = "README.md"
keywords = ["sort", "strings","american","flag"]
license = "MIT"

[profile.test]
# This is faster, since the tests are CPU-intensive
opt-level = 3

[profile.bench]
# Useful for perf
debug = true

[dev-dependencies]
quickcheck = "0.3"
rand = "0.3"
regex = "0.2"
